<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Activity_Opciones">


    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="53dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_crear_usuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_orrar_usuarios"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            android:backgroundTint="@color/oscuro_azulado"
            android:onClick="CrearAct"
            android:text="@string/btn_agregarUsuario"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_crear_estancias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_borrar_actividades"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            android:backgroundTint="@color/oscuro_azulado"
            android:text="@string/btn_crear_estancias"
            android:onClick="CrearEstancia"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_crear_tareas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_orrar_usuarios"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"
            android:backgroundTint="@color/oscuro_azulado"
            android:onClick="CrearAct"
            android:text="@string/btn_crear_actividad"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL1.0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL"
        android:layout_alignParentStart="true"
        android:layout_marginTop="57dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_borrar_usuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_crear_estancias"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/luminoso"
            android:onClick="borrarUsuarios"
            android:text="@string/btn_borrar_usuarios"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_borrar_actividades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:backgroundTint="@color/luminoso"
            android:onClick="borrarTareas"
            android:text="@string/btn_borrar_actividades"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/btn_orrar_usuarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_crear_tareas"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/luminoso"
            android:textColor="@color/white"
            android:onClick="borrarEstancias"
            android:text="@string/btn_borrar_estancias" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/oscuro_azulado"
        android:textColor="@color/white"
        android:onClick="volver"
        android:text="@string/btn_volver" />
</RelativeLayout>