<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/popupbackground">

    <TextView
        android:id="@+id/NombreTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="7dp"
        android:text="@string/pop_title"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="300dp"
        android:layout_height="219dp"
        android:layout_above="@+id/btn_pop1"
        android:layout_below="@+id/NombreTarea"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:text="@string/pop_desc"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_pop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/luminoso"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_borrar" />

    <Button
        android:id="@+id/btn_pop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/oscuro_azulado"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_volver" />

</RelativeLayout>