<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lbl_usuario"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_nuevoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/luminoso"
            android:onClick="btnCrearUsuario"
            android:text="@string/btn_agregarUsuario"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_tareas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/luminoso"
                android:onClick="MenuTareas"
                android:text="@string/btn_tareas"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_estancias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/luminoso"
                android:onClick="CrearEstancia"
                android:text="@string/btn_crear_estancias"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_opciones"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/oscuro_azulado"
                android:onClick="MenuOpciones"
                android:text="@string/btn_opciones"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_salir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/oscuro_azulado"
                android:onClick="salir"
                android:text="@string/btn_salir"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>