<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Activity_Tareas">

    <LinearLayout
        android:id="@+id/LL2"
        android:layout_width="381dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/lbl_tarea"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="132dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_nuevoUsuario"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/luminoso"
            android:textColor="@color/white"
            android:onClick="creacTarea"
            android:text="@string/btn_crear_actividad" />

        <Button
            android:id="@+id/btn_opciones"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/oscuro_azulado"
            android:textColor="@color/white"
            android:onClick="volver"
            android:text="@string/btn_volver" />

    </LinearLayout>


</RelativeLayout>